Attempt to automate installation

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install": "./install.sh",
+    "install": "./install.sh"
   },
   "repository": {
     "type": "git",
