--- a/src/pjmedia/Makefile
+++ b/src/pjmedia/Makefile
@@ -18,7 +18,7 @@ all: libchainlink.a
 
 #libchainlink.a: chainlink_wire_port.o chainlink_dtmfdet.o chainlink_tonegen.o chainlink_wav_player.o
 #libchainlink.a: chainlink_wire_port.o chainlink_dtmfdet.o chainlink_tonegen.o
-libchainlink.a: chainlink_wire_port.o chainlink_dtmfdet.o chainlink_wav_player.o chainlink_wav_writer.o chainlink_tonegen.o
+libchainlink.a: chainlink_wire_port.o chainlink_dtmfdet.o chainlink_wav_player.o chainlink_wav_writer.o chainlink_tonegen.o chainlink_fax.o
 	ar rcs $@ $^
 
 chainlink_wire_port.o: 
@@ -30,6 +30,8 @@ chainlink_wav_player.o:
 chainlink_wav_writer.o: 
 
 chainlink_tonegen.o:
+
+chainlink_fax.o:
 
 clean:
 	rm -f *.o
