--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sip-lab",
-  "version": "1.12.5",
+  "version": "1.12.6",
   "description": "",
   "main": "index.js",
   "engines": {
@@ -23,9 +23,9 @@
     "node-gyp": "^8.4.1"
   },
   "devDependencies": {
+    "@mayama/zeq": "^4.1.14",
     "data-matching": "^1.23.8",
     "sip-matching": "^1.3.13",
-    "string-matching": "^1.11.9",
-    "zester": "^4.1.1"
+    "string-matching": "^1.11.9"
   }
 }
