--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sip-lab",
-  "version": "1.12.17",
+  "version": "1.12.19",
   "description": "",
   "main": "index.js",
   "engines": {
@@ -19,13 +19,10 @@
   "gypfile": true,
   "homepage": "https://github.com/MayamaTakeshi/sip-lab",
   "dependencies": {
-    "node-addon-api": "^1.7.2",
-    "node-gyp": "^8.4.1"
-  },
-  "devDependencies": {
     "@mayama/zeq": "^4.1.14",
-    "data-matching": "^1.23.8",
-    "sip-matching": "^1.3.31",
-    "string-matching": "^1.11.9"
+    "data-matching": "^1.24.0",
+    "node-addon-api": "^1.7.2",
+    "node-gyp": "^8.4.1",
+    "sip-matching": "^1.3.31"
   }
 }
