--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "sip-lab",
-  "version": "1.12.24",
+  "version": "1.12.26",
   "description": "",
   "main": "index.js",
   "engines": {
     "node": ">=10.22"
   },
   "scripts": {
-    "install": "./install.sh",
+    "install": "node-gyp-build",
     "test": "./runtests"
   },
   "repository": {
@@ -19,9 +19,20 @@
   "gypfile": true,
   "homepage": "https://github.com/MayamaTakeshi/sip-lab",
   "dependencies": {
-    "node-addon-api": "^1.7.2",
-    "node-gyp": "^8.4.1",
     "@mayama/zeq": "^4.1.14",
+    "node-addon-api": "^5.0.0",
+    "node-gyp": "^9.1.0",
+    "node-gyp-build": "^4.5.0",
     "sip-matching": "^1.3.32"
-  }
+  },
+  "devDependencies": {
+    "prebuildify": "^5.0.1"
+  },
+  "files": [
+    "index.js",
+    "bindings.gyp",
+    "build_deps.sh",
+    "samples",
+    "prebuilds"
+  ]
 }
