--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sip-lab",
-  "version": "1.12.35",
+  "version": "1.12.36",
   "description": "",
   "main": "index.js",
   "engines": {
@@ -32,6 +32,7 @@
     "index.js",
     "binding.gyp",
     "build_deps.sh",
+    "include",
     "src",
     "README.md",
     "DEV.md",
