--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sip-matching": "^1.3.32"
   },
   "devDependencies": {
-    "prebuildify": "^5.0.1"
+    "prebuildify": "^5.0.1",
+    "prebuildify-cross": "^5.0.0"
   },
   "files": [
     "index.js",
