#38: updated package.json and  DEV.md with proper commands/instructions

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "install": "node-gyp-build",
+    "build": "node-gyp build",
+    "rebuild": "node-gyp rebuild",
     "test": "./runtests"
   },
   "repository": {
