--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/MayamaTakeshi/sip-lab",
   "dependencies": {
     "@mayama/zeq": "^4.1.14",
+    "mrcp": "^1.3.11",
     "node-addon-api": "^5.0.0",
     "node-gyp": "^9.3.0",
     "node-gyp-build": "^4.5.0",
