--- a/research/test.c.sample
+++ b/research/test.c.sample
@@ -2,29 +2,23 @@
 #include <pjlib.h>
 #include <pjmedia.h>
 
-
 pj_thread_desc g_main_thread_descriptor;
 pj_thread_t *g_main_thread = NULL;
 
 static pj_caching_pool cp;
-static pj_pool_t *g_pool;
+static pj_pool_t *pool;
 
 int main() {
-   pj_status_t status = pj_init();
-   if(status != PJ_SUCCESS) {
-    printf("pj_init failed\n");
-   }
+    pj_status_t status = pj_init();
+    if(status != PJ_SUCCESS) {
+        printf("pj_init failed. status=%i\n", status);
+    }
 
-   pj_caching_pool_init(&cp, &pj_pool_factory_default_policy, 0);
+    pj_caching_pool_init(&cp, &pj_pool_factory_default_policy, 0);
 
-   g_pool = pj_pool_create(&cp.factory, "tester", 1000, 1000, NULL);
+    pool = pj_pool_create(&cp.factory, "tester", 1000, 1000, NULL);
 
-   /*
-   status = pj_thread_register("main", g_main_thread_descriptor, &g_main_thread);
-   if(status != PJ_SUCCESS) {
-    printf("pj_thread_register failed\n");
-   }
-   */
+    // The above lines are always required. Do not remove them.
 
     const char *sdp_str =
         "m=audio 5004 RTP/AVP 0 8\r\n"
@@ -35,38 +29,24 @@ int main() {
         "a=encrypt:1 AES_CM_128_HMAC_SHA1_80 inline:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\r\n";
 
     pjmedia_sdp_session *sdp = NULL;
-    //pjmedia_sdp_attr *attr = NULL;
 
-    // Parse the SDP string
-    status = pjmedia_sdp_parse(g_pool, sdp_str, strlen(sdp_str), &sdp);
+    status = pjmedia_sdp_parse(pool, sdp_str, strlen(sdp_str), &sdp);
     if(status != PJ_SUCCESS) {
-      printf("pjmedia_sdp_parse failed\n");
+      printf("pjmedia_sdp_parse failed. status=%\n", status);
       return 1;
     }
 
-    // Check if parsing was successful
     if (status == PJ_SUCCESS) {
         char buf[2048];
         int len = pjmedia_sdp_print(sdp, buf, sizeof(buf));
         if(len < 0) {
-           printf("pjmedia_sdp_print failed\n");
+           printf("pjmedia_sdp_print failed.\n");
            return 1;
         }
         buf[len] = 0;
         printf("sdp:\n%s\n", buf);
-
-        // Find the "a=encrypt" attribute in the media stream description
-        /*
-        attr = pjmedia_sdp_media_find_attr(media, "encrypt");
-        if (attr) {
-            // "a=encrypt" attribute found, get its value
-            const char *encrypt_value = pj_strbuf_ptr(&attr->value);
-            // Do something with the encryption information
-            // ...
-        }
-        */
     } else {
-        printf("SDP parsing failed\n");
+        printf("SDP parsing failed. status=%i\n", status);
         return 1;
     }
 
