--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/MayamaTakeshi/sip-lab",
   "dependencies": {
     "@mayama/zeq": "^4.1.14",
-    "mrcp": "^1.3.11",
+    "mrcp": "^1.4.0",
+    "mrcp-matching": "^1.0.0",
     "node-addon-api": "^5.0.0",
     "node-gyp": "^9.3.0",
     "node-gyp-build": "^4.5.0",
