--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "node-addon-api": "^5.0.0",
     "node-gyp": "^9.3.0",
     "node-gyp-build": "^4.5.0",
-    "sdp-matching": "^1.2.0",
     "sip-matching": "^1.3.34"
   },
   "devDependencies": {
     "prebuildify": "^5.0.1",
-    "prebuildify-cross": "github:MayamaTakeshi/prebuildify-cross#use_existing_images"
+    "prebuildify-cross": "github:MayamaTakeshi/prebuildify-cross#use_existing_images",
+    "sdp-matching": "^1.3.0"
   },
   "files": [
     "index.js",
