--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "devDependencies": {
     "prebuildify": "^6.0.0",
     "prebuildify-cross": "github:MayamaTakeshi/prebuildify-cross#use_existing_images",
-    "sdp-matching": "^1.3.2"
+    "sdp-matching": "^1.3.2",
+    "sipjs-lab": "^1.3.10"
   },
   "files": [
     "index.js",
