Updated devjournals with research regarding pocketsphinx and flite

--- a/docker-images/debian11/Dockerfile
+++ b/docker-images/debian11/Dockerfile
@@ -9,7 +9,9 @@ ENV https_proxy=$https_proxy
 ENV no_proxy=$no_proxy
 
 RUN apt -y update && \
-  apt install -y build-essential automake autoconf libtool libspeex-dev libopus-dev libsdl2-dev libavdevice-dev libswscale-dev libv4l-dev libopencore-amrnb-dev libopencore-amrwb-dev libvo-amrwbenc-dev libvo-amrwbenc-dev libboost-dev libtiff-dev libpcap-dev libssl-dev uuid-dev flite-dev cmake wget git nodejs npm
+  apt install -y build-essential automake autoconf libtool libspeex-dev libopus-dev libsdl2-dev libavdevice-dev libswscale-dev libv4l-dev libopencore-amrnb-dev libopencore-amrwb-dev libvo-amrwbenc-dev libvo-amrwbenc-dev libboost-dev libtiff-dev libpcap-dev libssl-dev uuid-dev flite-dev cmake
+
+RUN apt install -y wget git nodejs npm
 
 SHELL ["/bin/bash", "--login", "-c"]
 
