--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sip-lab",
-  "version": "1.28.2",
+  "version": "1.28.3",
   "description": "",
   "main": "index.js",
   "engines": {
@@ -27,13 +27,13 @@
     "node-addon-api": "^5.0.0",
     "node-gyp": "^9.3.0",
     "node-gyp-build": "^4.5.0",
-    "sip-matching": "^1.5.2"
+    "sip-matching": "^1.5.2",
+    "sdp-matching": "^1.3.2",
+    "sipjs-lab": "^1.3.10"
   },
   "devDependencies": {
     "prebuildify": "^6.0.0",
-    "prebuildify-cross": "github:MayamaTakeshi/prebuildify-cross#use_existing_images",
-    "sdp-matching": "^1.3.2",
-    "sipjs-lab": "^1.3.10"
+    "prebuildify-cross": "github:MayamaTakeshi/prebuildify-cross#use_existing_images"
   },
   "files": [
     "index.js",
